# makectl

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: config.rs  main.rs
templates/: clean-pyc.template  templates.json
